      AST_agent_performance_detail.php,
      AST_agent_performance_detail_SALES.php,
      AST_performance_comparison_report.php,
      fcstats.php,
      fcstats_detail.php: Rewritte CSV download handling.
    - admin.php,
      vicidial_sales_viewer.php: Added housecleaning code.
    - admin_listloader_fourth_gen.php: Write logs only if $DB > 0.
    - functions.php: Add separator to log.

2.25.22
  [Jörg Frings-Fürst]
  * admin.php: Fix table for contacts.
  * admin.php: Allow Clear Lists for User Level >= 8 (2017-062).
  * AST_VDauto_dial.pl: Add test to check dialable status (2017-061).
  * Add upstream Rev. 2875:
    - admin_modify_lead.php: Added ability to modify all active scheduled
        callbacks, and view callbacks log.
  * Release 2.25.22 2017-12-27.

2.25.21
  [Jörg Frings-Fürst]
  * Wall_js.php: 
     - Add MaxWaittime to 'Gesamt'.
     - Add CompanyName to Title.
  * AST_CRON_WallBoard3_gen.php: Typo in statement15.
  * New ODS_Export.php (2017-055).
  * Add upstream Rev. 2858:
    - DISPO_SEND_EMAIL.txt: Update the last changes.
  * Wall_js.php:  Add missing argument 5 for user_authorization().
  * New tools directory (2017-056).
  * New directory license, contain all license texts (2017-057).
  * New DB-Schema 1528:
    - Add max_inbound_calls_outcome to vicidial_campaigns.
    - Add manual_auto_next_options to vicidial_campaigns.
    - Add agent_screen_time_display to vicidial_campaigns.
    - Add office_num_phone_code,
          cell_num_phone_code,
          other_num1_phone_code,
          other_num2_phone_code to contact_information;
  * Add upstream Rev. 2859:
    - agi-VDAD_ALL_inbound.agi,
      vdc_db_query.php,
      vicidial.php,
      admin.php,
      help.php,
      UPGRADE: Added max_inbound_calls_outcome options.
  * Add upstream Rev. 2860:
    - vicidial.php,
      admin.php,
      help.php,
      UPGRADE: Added manual_auto_next_options options.
  * Add upstream Rev. 2861:
    - vdc_db_query.php,
      vdc_email_display.php,